<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlageActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_hos_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/boutons"
        app:layout_constraintTop_toTopOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"/>


    <Button
        android:id="@+id/notifications"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/bouton3"
        android:layout_marginStart="35dp">
    </Button>

    <LinearLayout
        android:id="@+id/boutons"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <Button
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton1"
            android:layout_marginStart="5dp">

        </Button>

        <Button
            android:id="@+id/liste"
            app:layout_constraintLeft_toRightOf="@id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton2"
            android:layout_marginStart="35dp">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>